--- a/css/main.css
+++ b/css/main.css
@@ -173,17 +173,19 @@ input[type='range']::-webkit-slider-thumb {
           width: inherit;
           margin-left: -15px;
           border-radius: 0 100px 0 100px; }
-        .container .audio--container .audio--controls .player {
-          position: relative;
-          display: flex;
-          align-items: inherit;
-          justify-content: center; }
-        .container .audio--container .audio--controls .muted {
-          left: -50%; }
-        .container .audio--container .audio--controls .slide--control {
-          left: -70%; }
-        .container .audio--container .audio--controls .counters {
-          margin-left: -40%; } }
+        .container .audio--container .audio--controls .audio--buttons {
+          position: relative; }
+          .container .audio--container .audio--controls .audio--buttons .player {
+            position: relative;
+            display: flex;
+            align-items: inherit;
+            justify-content: center; }
+          .container .audio--container .audio--controls .audio--buttons .muted {
+            left: -50%; }
+          .container .audio--container .audio--controls .audio--buttons .slide--control {
+            left: -70%; }
+          .container .audio--container .audio--controls .audio--buttons .counters {
+            margin-left: -40%; } }
 
 /* Small devices */
 @media screen and (max-width: 375px) {
@@ -194,31 +196,34 @@ input[type='range']::-webkit-slider-thumb {
       height: 30vh;
       border-radius: var(--pos);
       margin: auto; }
-      .container .audio--container .progress--bar {
-        display: none; }
-      .container .audio--container .audio--buttons {
-        width: var(--size);
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        justify-content: center; }
-        .container .audio--container .audio--buttons .player {
-          position: absolute;
-          top: 12%; }
-        .container .audio--container .audio--buttons .muted {
-          bottom: -25px md-mute;
-            bottom-font-size: 2rem; }
-        .container .audio--container .audio--buttons .slide--control {
-          left: 30px;
-          top: 7px; }
-        .container .audio--container .audio--buttons .counters {
-          position: absolute;
-          top: 25%;
-          left: 90%; }
-          .container .audio--container .audio--buttons .counters span {
-            display: inline;
-            font-size: .75rem;
-            letter-spacing: 1.5px; } }
+      .container .audio--container .audio--controls {
+        position: relative; }
+        .container .audio--container .audio--controls .progress--bar {
+          display: none; }
+        .container .audio--container .audio--controls .audio--buttons {
+          width: var(--size);
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+          justify-content: center; }
+          .container .audio--container .audio--controls .audio--buttons .player {
+            position: absolute;
+            top: 12%; }
+          .container .audio--container .audio--controls .audio--buttons .muted {
+            bottom: -25px; }
+            .container .audio--container .audio--controls .audio--buttons .muted .md-mute {
+              font-size: 2rem; }
+          .container .audio--container .audio--controls .audio--buttons .slide--control {
+            left: 30px;
+            top: 7px; }
+          .container .audio--container .audio--controls .audio--buttons .counters {
+            position: absolute;
+            top: 25%;
+            left: 90%; }
+            .container .audio--container .audio--controls .audio--buttons .counters span {
+              display: inline;
+              font-size: .75rem;
+              letter-spacing: 1.5px; } }
 
 @media screen and (max-width: 320px) {
   h1.heading {
