agregada una etiqueta span con la clase slashes en la sección counters del archivo index.html y en el archivo styles.css, se agregaron estilos a esta class

--- a/css/styles.css
+++ b/css/styles.css
@@ -216,6 +216,10 @@ input[type='range']::-webkit-slider-thumb {
     color: var(--white);
 }
 
+.slashes {
+    color: var(--white)
+}
+
 /* =================================================
                                                 Media queries
 ================================================= */
