--- a/css/styles.css
+++ b/css/styles.css
@@ -372,6 +372,73 @@ input[type='range']::-webkit-slider-thumb {
     }
 }
 
+@media screen and (max-width: 414px) {
+    .audio--container {
+        width: 120vw !important;;
+        height: 30vh;
+        display: flex;
+        
+    }
+    
+    .audio--player {
+        grid-column: 1;
+        grid-row: 1
+    }
+    
+    .audio--controls {
+        display: grid;
+        height: 100%;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        
+        grid-row: 2
+    }
+    
+    .progress--bar {
+        width: 220px !important;;
+        grid-column: 1;
+        grid-row: 1;
+        position: absolute;
+        top: 10px
+    }
+    
+    .audio--buttons {
+        display: grid;
+        height: 10vh;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(4, 1fr)
+    }
+    
+    .player {
+        position: relative;
+        grid-column: 1;
+        grid-row: 4;
+    }
+    
+    .muted {
+        grid-column: 2;
+        grid-row: 4;
+        margin-right: 10px
+    }
+    
+    .slide--control {
+        grid-column: 3;
+        grid-row: 4;
+    }
+    
+    input[type="range"]{
+        width: 100px;
+        position: relative;
+        left: 80px
+    }
+    
+    .counters {
+        grid-row: 5;
+        top: 50%;
+        left: 100%
+    }
+}
+
 @media screen and (max-width: 320px) {
     h1.heading {
         font-size: 2rem
