--- a/css/app-menu.css
+++ b/css/app-menu.css
@@ -42,7 +42,7 @@ body {
     position: relative;
     margin-left: 0;
     margin-right: 0;
-    background: url('..images/header.jpg') no-repeat;
+    background: url('../images/header.jpg') no-repeat;
     background-position: center;
     background-size: cover;
 }
