Otro error corregido en el archivo app-menu.css

--- a/css/app-menu.css
+++ b/css/app-menu.css
@@ -176,7 +176,7 @@ body {
 }
 
 .app--link:hover {
-    color: var(--font-stack) !important;
+    color: var(--font-color) !important;
 }
 
 /* =============== Logo ===============  */
