--- a/css/app-menu.css
+++ b/css/app-menu.css
@@ -9,7 +9,7 @@
     --size: 100%;
     --height: 100vh;
     
-    --font-color: #2c3e50;
+    --font-color: #3177A8;
     --primary-color: #ecf0f1;
     --dark: #000;
 
@@ -174,6 +174,23 @@ body {
 
 .app--link:hover {
     color: var(--font-color) !important;
+}
+
+.app--link::before {
+    content: '';
+    width: var(--size);
+    position: absolute;
+    top: var(--size)
+}
+
+.app--link::before {
+    width: 0;
+}
+
+.app--link:hover::before {
+    width: 250px;
+    border-bottom: 1px solid var(--primary-color);
+    transition: width .4s ease-in;
 }
 
 /* =============== Logo ===============  */
