--- a/css/app-menu.css
+++ b/css/app-menu.css
@@ -146,10 +146,16 @@ body {
 .app--navigation__menu {
     width: var(--size);
     height: var(--height);
-    display: flex;
+    /* display: flex;
     align-items: flex-start;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-around; */
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(5, 1fr);
+    place-items: start;
+    margin-top: 0;
+    margin-left: 0;
     transition: all 1s cubic-bezier(0.55, 0.055, 0.675, 0.19);
 
     list-style: none;
@@ -157,8 +163,8 @@ body {
 
 .app--navigation__menu .app--item {
     display: block;
-    font: 2rem var(--font-stack);
-    margin: 0;
+    font: 1.6483rem var(--font-stack);
+    margin: auto 0;
     padding: 0;
     transform: translateX(-100%) scaleX(0);
     transition: all 1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
