--- a/css/app-menu.css
+++ b/css/app-menu.css
@@ -95,12 +95,14 @@ a {
     grid-template-rows: repeat(3, 1fr);
     position: absolute;
     right: 0;
+
+    list-style: none
 }
 
-.app--navigation__menu .app--item {
+.app--link {
     display: block;
     margin: 2% auto;
-    font-size: 1.5632rem;
+    font-size: 1.7632rem !important;
 }
 
 .app--navigation__menu .app--item:first-child {
@@ -330,262 +332,5 @@ a {
     .app--navigation__menu.open .app--item {
         transform: translateX(100%) scaleX(1); 
         transition:  all 2s cubic-bezier(0.785, 0.135, 0.15, 0.86);
-    }
-}
-
-@media screen and (min-width: 653px){
-    .app--navigation__menu {
-        width: 25rem
-    }
-
-    .app--navigation__menu .app--item {
-        font-size: 1.25rem;
-    }
-
-    .logo {
-        font-size: 1.53rem;
-        left: 25px
-    }
-}
-
-@media screen and (min-width: 667px){
-    .app--navigation__menu {
-        width: 25rem
-    }
-
-    .app--navigation__menu .app--item {
-        font-size: 1.25rem;
-    }
-
-    .logo {
-        font-size: 1.53rem;
-        left: 25px
-    }
-}
-
-/* =============== Tablets and Laptops ===============  */
-@media screen and (min-width: 768px){
-
-    /* =============== Navigation & toggler ===============  */
-    .app--navigation {
-        width: inherit;
-        height: var(--height);
-        display: flex;
-        background: rgba(0,0,0,.3);
-    }
-
-    .toggler {
-        width: 4.5rem;
-        height: 1.5rem;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        position: fixed;
-        top: 2.3rem;
-        right: 1rem;
-
-        transition: transform 350ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
-        cursor: pointer;
-        z-index: 120;
-    }
-
-    .bar {
-        width: var(--size);
-        height: 2px;
-        background: var(--primary-color);
-        border-radius: 5px;;
-    }
-
-    .bar.half {
-        width: 50%;
-    }
-
-    .bar.start {
-        transform-origin: left;
-        transition: transform 350ms cubic-bezier(0.6, -0.28, 0.735, 0.045)
-    }
-
-    .bar.end {
-        align-self: flex-end;
-        transform-origin: right;
-        transition: transform 350ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
-    }
-
-    .open .bar.start {
-        transform: rotate(270deg) translate(-.5rem, 2.3rem);
-    }
-
-    .open .bar.end {
-        transform: rotate(270deg) translate(.5rem, -2.2rem);
-    }
-
-    .open.toggler {
-        transform: rotate(-45deg);
-    }
-
-    .app--navigation,
-    .app--navigation::before,
-    .app--navigation::after {
-        content: '';
-        width: var(--size);
-        height: var(--height);
-        position: relative;
-        transition: all 1s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-        overflow: hidden;
-    }
-
-    .app--navigation::before,
-    .app--navigation::after {
-        width: 51%;
-        background: var(--dark);
-        position: absolute;
-        z-index: 100;
-        transform: translateX(0);
-    }
-
-    .app--navigation::before {
-        left: 0;
-    }
-
-    .app--navigation::after {
-        right: 0;
-    }
-
-    .app--navigation.active::before {
-        left: -50%;
-        opacity: 0;
-    }
-
-    .app--navigation.active::after {
-        right: -50%;
-        opacity: 0;
-    }
-
-    /* =============== Menu ===============  */
-    .app--navigation__menu {
-        width: var(--size);
-        height: var(--height);
-        display: flex;
-        align-items: flex-start;
-        flex-direction: column;
-        justify-content: space-around;
-        margin-top: 0;
-        margin-left: 0;
-        left: 50px;
-        transition: all 1s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-
-        list-style: none;
-    }
-
-    .app--navigation__menu .app--item {
-        display: block;
-        font-size: 3.23rem !important;
-        margin: auto 0;
-        padding: 0;
-        transform: translateX(-100%) scaleX(0);
-        transition: all 1s cubic-bezier(0.455, 0.03, 0.515, 0.955);
-    }
-
-    .app--link {
-        padding: 0;
-        transition: all 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    }
-
-    .app--link:hover {
-        color: var(--font-color) !important;
-    }
-
-    .app--link::before {
-        content: '';
-        width: var(--size);
-        position: absolute;
-        top: var(--size)
-    }
-
-    .app--link::before {
-        width: 0;
-    }
-
-    .app--link:hover::before {
-        width: 250px;
-        border-bottom: 1px solid var(--primary-color);
-        transition: width .4s ease-in;
-    }
-
-    /* =============== Logo ===============  */
-    .logo {
-        width: var(--size);
-        font-size: 4.894rem !important;
-        position: absolute;
-        top: var(--pos);
-        left: var(--pos);
-        transform: translate(0, -50%);
-        letter-spacing: 1px;
-        text-align: center;
-        transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        opacity: 1;
-        z-index: 110;
-    }
-
-    .logo.show {
-        top: var(--pos);
-        right: var(--pos);
-        transform: translate(0, -50%);
-        opacity: 0
-    }
-
-    .app--navigation__menu.open .app--item {
-        transform: translateX(100%) scaleX(1); 
-        transition:  all 2s cubic-bezier(0.785, 0.135, 0.15, 0.86);
-    }
-}
-
-@media screen and (min-width: 768px){
-    .app--navigation__menu {
-        width: 25rem
-    }
-
-    .app--navigation__menu .app--item {
-        font-size: 1.245rem;
-    }
-
-    .logo {
-        font-size: 1.583rem;
-        left: 25px
-    }
-}
-
-@media screen and (min-width: 812px){
-    .app--navigation__menu {
-        width: var(--size)
-    }
-
-    .app--navigation__menu .app--item {
-        font-size: 1.75rem !important;
-    }
-}
-
-@media screen and (min-width: 823px) {
-    .app--navigation__menu {
-        width: var(--size)
-    }
-
-    .app--navigation__menu .app--item {
-        font-size: 1.7825rem !important;
-    }
-}
-
-@media screen and (min-width: 1024px){
-    .app--navigation__menu {
-        width: 35rem
-    }
-
-    .app--navigation__menu .app--item {
-        font-size: 1.986rem;
-    }
-
-    .logo {
-        font-size: 2.3rem;
-        left: 25px
     }
 }
