--- a/css/nintendo.css
+++ b/css/nintendo.css
@@ -411,8 +411,96 @@ body {
     border-radius: 5px
 }
 
+.screen .logo--container {
+    width: 110px;
+    height: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.left--logo,
+.right--logo {
+    height: 100px;
+    border: 6px solid var(--white);
+}
+
+.left--logo {
+    width: 36px;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+}
+
+.right--logo {
+    width: 32px;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    background: var(--white);
+    animation: updown 2s ease infinite alternate
+}
+
+.left--logo::after,
+.right--logo::after {
+    content: '';
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    transform: translate(-50%, -50%);
+    border-radius: var(--pos);
+}
+
+.left--logo::after {
+    top: -110px;
+    left: -32px;
+    background: var(--white)
+}
+
+.right--logo::after {
+    bottom: -40px;
+    right: -12px;
+    background: var(--gray)
+}
+
+@keyframes updown {
+    from {
+        transform: translateY(-6px);
+    }
+    to {
+        transform: translateY(6px);
+    }
+}
+
 .screen .nintendo {
-    text-transform: capitalize;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-transform: uppercase;
     font-family: var(--font-stack);
-    color: var(--white)
+    color: var(--white);
+    text-align: center;
+    font-weight: 500;
+    letter-spacing: 8px;
+    line-height: 30px;
+}
+
+.nintendo span {
+    display: block;
+    margin: 0;
+    padding: 0;
+    font-size: 2.25rem;
+    font-weight: 600;
+}
+
+.nintendo small {
+    align-self: flex-end;
+    position: relative;
+    right: -5px;
+    bottom: 20px;
+    font-size: .54rem;
+    letter-spacing: 1px;
 }
