--- a/css/nintendo.css
+++ b/css/nintendo.css
@@ -14,19 +14,21 @@ body {
     --pos: 50%;
     --size: 100%;
     --height: 100vh;
+    --left-radius: 6.084272em .482em .482em 6.084272em;
+    --right-radius: .482em 6.084272em 6.084272em .482em;
 
     --font-stack: 'Abel', sans-serif;
 
     /* COLORS */
-    --gray: #1E2D2F;
+    --gray: #222222;
     --black: #000;
     --white: #fff;
     --light-blue: #00C0E3;
     --light-red: #FE5A4B;
     --light-gray: #4E5D61;
-    --dark-gray: #273D39;
-    --dark-cloud: #5F6D72;
-    --cloud: #9aa3a5;
+    --dark-gray: #333333;
+    --dark-cloud: #444444;
+    --cloud: #666666;
     --screen: #1C1D21;
     /* shadow */
     --left-shadow: #0896B7;
@@ -45,24 +47,25 @@ body {
 .header,
 .switch--container,
 .joy--con,
-.left--lever,
-.right--lever,
+.stick,
 .button,
+.minus--button,
+.plus--button,
 .capture--button,
 .action--buttons,
+.directional--buttons,
 .home--button,
 .display--box {
     position: relative;
 }
 
-.minus--button,
-.plus--button,
-.left--lever,
-.right--lever,
-.button,
-.capture--button,
-.home--button {
+button {
     cursor: pointer;
+    border: none;
+}
+
+button:focus {
+    outline: none
 }
 
 .header {
@@ -86,41 +89,40 @@ body {
 
 .switch {
     width: var(--size);
-    max-width: 710px;
+    max-width: 1000px;
     display: flex;
     align-items: center;
     justify-content: space-around;
 }
 
-/* ============================== Buttons ============================== */
+/* ============================== Joy-Con ============================== */
 .joy--con {
-    width: 100px;
-    height: 300px;
-    display: flex;
+    width:  9.015em;;
+    height: 30em;
+    display: block;
+    /* display: flex;
     align-items: center;
     flex-direction: column;
-    justify-content: center;
+    justify-content: center; */
+    backface-visibility: hidden;
 }
 
 .left--joycon {
-    border-top-left-radius: 60px;
-    border-bottom-left-radius: 60px;
-    border-top-right-radius: 3px;
-    border-bottom-right-radius: 3px;
+    border-radius: var(--left-radius);
     background: var(--light-blue);
-    box-shadow: 3px -4px 6px var(--left-shadow) inset,
-                              3px 4px 6px var(--light-blue-shadow) inset;
-    left: 0
+    box-shadow: 
+        0 -0.0625em 0.0125em var(--left-shadow) inset,
+        3px 4px 6px var(--light-blue-shadow) inset,
+        0 0.0125em 0.125em -0.03125em rgba(0,0,0,.2), 0 0.1875em 0.0125em -0.08743em rgba(255,255,255,.4);
+        left: 0
 }
 
 .right--joycon {
-    border-top-right-radius: 60px;
-    border-bottom-right-radius: 60px;
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
+    border-radius: var(--right-radius);
     background: var(--light-red);
-    box-shadow: -3px -4px 6px var(--right-shadow) inset,
-                              -3px 4px 6px var(--light-red-shadow) inset;
+    box-shadow: 
+        -0.0625em -0.0625em 0.0125em var(--right-shadow) inset,
+        -3px 4px 6px var(--light-red-shadow) inset, 0 0.0125em 0.125em -0.03125em rgba(0,0,0,.2), 0 0.1875em 0.0125em -0.08743em rgba(255,255,255,.4);
     right: 0
 }
 
@@ -129,109 +131,211 @@ body {
 .right--joycon::before,
 .right--joycon::after {
     content: '';
-    width: 60px;
-    height: 38px;
+    display: block;
     position: absolute;
     top: 0;
     left: 0;
-    border: 10px solid var(--dark-gray);
+    transform: translate(-50%, 25px);
+    z-index: 3
+}
+
+.left--joycon::before,
+.right--joycon::before {
+    width: 0.375em;
+    height: 24.0625em;
+    top: 0.75em;
+    box-shadow: none;
+    filter: blur(.0225em);
     z-index: -1
 }
 
-.left--joycon::before {
-    border-top-left-radius: 60px;
-    transform: translate(-1px, -3px) rotate(0) skewX(-2deg);
+.left--joycon::after,
+.right--joycon::after {
+    width: 0.625em;
+    height: 25.625em;
+    background: var(--gray);
+    top: 0.75em;
+    filter: blur(0);
+    z-index: -1;
 }
 
-.right--joycon::before {
-    border-top-right-radius: 60px;
-    transform: translate(21px, -3px) rotate(0) skewX(2deg);
+.left--joycon::before {
+    left: calc(var(--pos) +  4.55em);
+    background: var(--black);
+    border-radius: 0 .135em .135em 0;
 }
 
 .left--joycon::after {
-    width: 10px;
-    height: 250px;
-    background: var(--gray);
-    top: var(--pos);
-    left: var(--pos);
-    transform: translate(85%, -50%);
-    z-index: -1;
+    left: calc(var(--pos) +  5.014em);
+    background: var(--dark-cloud);
+    border-radius: 2.5px;
+}
+
+.right--joycon::before {
+    right: calc(var(--pos) +  5.75em);
+    background: var(--black);
+    border-radius: 0 .135em .135em 0;
 }
 
 .right--joycon::after {
-    width: 10px;
-    height: 250px;
-    background: var(--gray);
-    top: var(--pos);
-    right: var(--pos);
-    transform: translate(-15%, -50%);
-    z-index: -1;
+    left: calc(var(--pos) -  5.0142em);
+    background: var(--dark-cloud);
+    border-radius: 2.5px;
 }
 
+/* ============================== Stick ============================== */
+.stick {
+    width: 5.75em;
+    height: 5.75em;
+    position: absolute;
+    top: 5.3125em;
+    left: 2.5em;
+    border-radius: var(--pos);
+    background: var(--gray);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: .2685em var(--size), var(--size) .2685em, var(--size);
+    background-image: linear-gradient(
+        to bottom,
+        var(--gray),
+        var(--black)
+    ),
+    linear-gradient(
+        to bottom,
+        var(--gray),
+        var(--dark-gray)
+    ),
+    linear-gradient(
+        to bottom,
+        var(--cloud),
+        var(--black)
+    );
+    box-shadow: .125em -.0625em 0 .25em rgba(0,0,0,0), 0 -0.0625em 0.125em rgba(0,0,0,.75) inset, 0 0.125em 0.125em -0.03125em rgba(0,0,0,.2) inset, 0 0.1875em 0.125em -0.0625em rgba(255,255,255,.3) inset, 0 0 0.09375em rgba(0,0,0,.75), 0 0.375em 1em 0.0625em rgba(0,0,0,.4);
+}
+
+.stick::before,
+.stick::after {
+    content: '';
+    width: 75%;
+    height: 75%;
+    display: block;
+    position: absolute;
+    top: var(--pos);
+    left: var(--pos);
+    transform: translate(-50%, -50%);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: linear-gradient(
+        to bottom,
+        var(---cloud),
+        var(--gray)
+    );
+    border-radius: var(--pos);
+    box-shadow: 0 0 0.125em rgba(255,255,255,0.08) inset;
+}
+
+.stick::before {
+    width: 85%;
+    height: 85%;
+    background-size: 0.2685em var(--size), var(--size) 0.2685em, var(--size);
+    background-position: center;
+    background-image: linear-gradient(
+        to bottom,
+        var(--dark-cloud),
+        var(--black)
+    ),
+    linear-gradient(
+        to bottom,
+        var(--gray),
+        var(--dark-gray)
+    ),
+    linear-gradient(
+        to bottom,
+        var(--gray),
+        var(--cloud)
+    );
+    box-shadow: none
+}
+
+.stick::after {
+    background-image: linear-gradient(
+        to bottom,
+        var(--dark-cloud) 12%,
+        var(--black) 100%,
+        var(--light-gray) 90%
+    );
+    box-shadow: none
+}
+
+.left--stick {
+    top: 7.75em;
+    left: 2.75em;
+    margin: 1em 0;
+}
+
+.right--stick {
+    top: var(--pos);
+    left: 2.75em
+}
+
+/* ============================== Buttons ============================== */
 .minus--button,
 .plus--button {
-    position: absolute;
-    top: 15px;
-    font-size: 1.45rem;
+    width: 1.95em;
+    height: 0.6525em;
+    top: 3.1875em;
+    background-image: linear-gradient(
+        to bottom,
+        var(--dark-cloud),
+        var(--black)
+    ),
+    linear-gradient(
+        to bottom,
+        var(--gray),
+        var(--dark-gray)
+    ),
+    linear-gradient(
+        to bottom,
+        var(--gray),
+        var(--cloud)
+    );
+    border-radius: 0.125em;
+    box-shadow: .125em -.0625em 0 .25em rgba(0,0,0,0), 0 -0.0625em 0.125em rgba(0,0,0,.75) inset, 0 0.125em 0.125em -0.03125em rgba(0,0,0,.2) inset, 0 0.1875em 0.125em -0.0625em rgba(255,255,255,.3) inset, 0 0 0.09375em rgba(0,0,0,.75), 0 0.175em 1em 0.0325em rgba(0,0,0,.28);
 }
 
 .minus--button {
-    right: 5px
+    left: 7.7325em;
 }
 
 .plus--button {
-    left: 5px;
+    right: -1.175em;
 }
 
-.left--lever,
-.right--lever {
-    width: 50px;
-    height: 50px;
-    border-radius: var(--pos);
-    background: var(--dark-gray);
-}
-
-.left--lever {
-    top: -2em;
-    left: .5em;
-}
-
-.left--lever::before,
-.left--lever::after,
-.right--lever::before,
-.right--lever::after {
+.plus--button::before {
     content: '';
+    width: 0.6525em;
+    height: 1.95em;
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    border-radius: var(--pos);
-}
-
-.left--lever::before,
-.right--lever::before {
-    width: 53px;
-    height: 53px;
-    border-radius: var(--pos);
-    top: -4%;
-    left: -4%;
-    background: var(--gray);
-    box-shadow: 0 2px 3px rgba(0,0,0,.4), 
-                             2px -2px 4px var(--dark-gray) inset,
-                             1.5px 2px 1px var(--dark-cloud) inset;
-}
-
-.left--lever::after,
-.right--lever::after {
-    width: 43px;
-    height: 43px;
-    border: 1px solid var(--dark-gray);
-    top: 5%;
-    left: 5%;
-    box-shadow: 0 2px 3px rgba(0,0,0,.7), 
-                             2px 2px 4px var(--dark-gray) inset,
-                             -1px -1px 1px 0 var(--dark-cloud) inset;
+    top: var(--pos);
+    left: var(--pos);
+    transform: translate(-50%, -50%);
+    background-image: linear-gradient(
+        to bottom,
+        var(--dark-cloud),
+        var(--black)
+    ),
+    linear-gradient(
+        to bottom,
+        var(--gray),
+        var(--dark-gray)
+    ),
+    linear-gradient(
+        to bottom,
+        var(--gray),
+        var(--cloud)
+    );
+    border-radius: 0.125em;
+    z-index: 2
 }
 
 .directional--buttons,
@@ -240,16 +344,22 @@ body {
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(3, 1fr);
+    padding: 1em 0;
+}
+
+.directional--buttons {
+    top: 12.25em;
+    left: 1.985em;
 }
 
 .action--buttons {
-    top: -2rem;
-    left: -.5em;
+    top: 5.25rem;
+    left: 1.625em;
 }
 
 .button {
-    width: 20px;
-    height: 20px;
+    width: 2.2985em;
+    height: 2.2985em;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -285,31 +395,35 @@ body {
     margin-left: 2.5px
 }
 
-.bottom,
+.down,
 .B--button {
     grid-column: 2;
     grid-row: 3;
 }
 
-.X--button ,
-.Y--button, 
-.B--button,
-.A--button  {
+.button.X--button::before ,
+.button.Y--button::before, 
+.button.B--button::before,
+.button.A--button::before  {
+    content: attr(data-letter);
+    position: absolute;
     color: var(--white);
     font-size: .75rem;
     text-align: center;
     font-family: var(--font-stack);
+    font-weight: 600;
+    margin: 0 -0.0625em;
 }
 
 .capture--button,
 .home--button {
-    width: 25px;
-    height: 25px;
-    bottom: -15px;
+    width: 1.8625em;
+    height: 1.8625em;
+    bottom: -15em;
 }
 
 .capture--button {
-    right: -25px;
+    left: 7.09325em;
     border-radius: 2px;
     background: var(--gray);
     box-shadow: 0 2px 2px rgba(0,0,0,.4), 
@@ -333,20 +447,63 @@ body {
 .home--button {
     display: grid;
     place-items: center;
-    left: -25px;
+    right: -1.975em;
     border: 3px solid var(--cloud);
     border-radius: var(--pos);
     background: var(--dark-gray)
 }
 
-.home--button .home {
+/* .home--button .home {
     font-size: 1rem
+} */
+
+.shoulder {
+    width: 8.55815em;
+    height: 6.5em;
+    display: block;
+    position: absolute;
+    top: -0.5em;
+    border-radius: 0;
+    background: var(--light-gray) !important;
+    background-position: 0 0;
+    background-size: var(--size);
+    background-repeat: no-repeat;
+    background-image: linear-gradient(
+        to bottom,
+        var(--gray),
+        var(--dark-cloud)
+    ),
+    linear-gradient(
+        to bottom,
+        var(--gray),
+        var(--black)
+    ),
+    linear-gradient(
+        to bottom,
+        var(--cloud),
+        var(--dark-gray)
+    );
+    box-shadow: 0.125em 0.125em 0.25em 0 rgba(0,0,0,.159) inset, -0.125em -0.125em 0.25em 0 rgba(255,255,255,.159) inset, .125em -.0625em 0 .25em rgba(0,0,0,0), 0 -0.0625em 0.125em rgba(0,0,0,.75) inset, 0 0.125em 0.125em -0.03125em rgba(0,0,0,.2) inset, 0 0.1875em 0.125em -0.0625em rgba(255,255,255,.3) inset, 0 0 0.09375em rgba(0,0,0,.75), 0 0.375em 1em 0.0625em rgba(0,0,0,.4);
+    filter: blur(0.0154em);
+    z-index: -1
+}
+
+.__left {
+    background-size: var(--size);
+    border-radius: 6.084272em .374em 0 .374em;
+    transform: translate(0.28438em, .11254em) rotate(0) skewX(-9.5deg);
+}
+
+.__right {
+    background-size: var(--size);
+    border-radius: .374em 6.084272em  .374em 0;
+    transform: translate(1.9976em, .11254em) rotate(0) skewX(9.5deg);
 }
 
 /* ============================== Screen ============================== */
 .display--box {
-    width: 500px;
-    height: 292px;
+    width: 43.795em;
+    height: 29.25em;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -393,23 +550,23 @@ body {
 }
 
 .display {
-    width: calc(var(--size) - 50px);
-    height: 270px;
+    width: calc(var(--size) - 3em);
+    height: 27em;
     background: var(--black);
     margin: auto;
     border-radius: 15px;
 }
 
 .screen {
-    width: calc(var(--size) - 50px);
-    height: 220px;
+    width: calc(var(--size) - 7em);
+    height: 22em;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    margin: 25px auto;
+    margin: 2.5em auto;
     background: var(--screen);
-    border-radius: 5px
+    border-radius: 0
 }
 
 .screen .logo--container {
